Fix margin on smaller screen

--- a/app/assets/stylesheets/unc_custom.css.scss
+++ b/app/assets/stylesheets/unc_custom.css.scss
@@ -419,10 +419,6 @@ div.unc-citation-modal {
 
 @media only screen and (max-width: 800px) {
   #unc-featured {
-    .is-featured {
-      margin-bottom: 0;
-    }
-
     h2 {
       margin-bottom: 50px;
     }
